--- a/src/main/resources/templates/pozicija_list.html
+++ b/src/main/resources/templates/pozicija_list.html
@@ -88,7 +88,9 @@
   <div class="table-container">
     <table class="table table-hover text-center">
       <div class="d-flex justify-content-end mb-3">
-        <button class="btn btn-outline-success btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/pozicije/novapozicija}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" ><b>+</b></a></button>
+        <a class="nav-link" th:href="@{/pozicije/novapozicija}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" >
+          <button class="btn btn-outline-success btn-sm mx-1" type="button"><b>+</b></button>
+        </a>
       </div>
       <thead>
       <tr>
