JobEasy Spring Boot

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -12,6 +12,12 @@
 
 </head>
 <style>
+  html body{
+    background-image: url("../static/css/Pozadina.jpg");
+    background-size: cover;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+  }
   .table {
     border-radius: 10px;
     overflow: hidden;
