JobEasy Spring Boot

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -170,8 +170,8 @@
       <img src="/images/lista.png" alt="Icon">
     </div>
     <h1>7</h1>
-    <p class="title">Pregled aplikanata</p>
-    <a th:href="@{/prijava}" class="more-info">Više informacija &#x2794;</a>
+    <p class="title">Pregled firmi</p>
+    <a th:href="@{/firma}" class="more-info">Više informacija &#x2794;</a>
   </div>
 
 
