--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -169,7 +169,7 @@
     <div class="icon">
       <img src="/images/lista.png" alt="Icon">
     </div>
-    <h1>7</h1>
+    <h1><span th:text="${ukupanBrojFirmi}"></span></h1>
     <p class="title">Pregled firmi</p>
     <a th:href="@{/firma}" class="more-info">Više informacija &#x2794;</a>
   </div>
