--- a/src/main/resources/templates/pozicija_pregled.html
+++ b/src/main/resources/templates/pozicija_pregled.html
@@ -21,107 +21,68 @@
       box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
     }
 
-    h1 {
+    h1, h2 {
       text-align: center;
-      font-size: 2rem;
-      margin-bottom: 20px;
       color: #495057;
-    }
-
-    h2 {
-      font-size: 1.5rem;
-      color: #495057;
-      margin-top: 20px;
-      margin-bottom: 10px;
     }
 
     .pozicija-lista {
-      margin: 0;
       padding-left: 20px;
-      list-style-type: disc;
-    }
-
-    .pozicija-lista p,
-    .pozicija-lista li {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #6c757d;
-    }
-
-    .pozicija-lista li {
-      margin-bottom: 8px;
     }
 
     .button-container {
-      text-align: center; /* Centriranje dugmeta */
-      margin-top: 20px;   /* Razmak između sadržaja i dugmeta */
-    }
-
-    .btn-outline-warning {
-      font-size: 1rem;
-      font-weight: bold;
-      padding: 10px 20px;
+      text-align: center;
+      margin-top: 20px;
     }
   </style>
 </head>
-
+<body>
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" th:href="@{/welcome}">Početna</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <!-- Desna strana navigacije -->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/pozicije}">Lista pozicija</a></button>
+          <a class="btn btn-light btn-sm mx-1" th:href="@{/pozicije}">Lista pozicija</a>
         </li>
         <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
-          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a></button>
+          <a class="btn btn-light btn-sm mx-1" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a>
         </li>
         <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
-          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/korisnici}">Pregled korisnika</a></button>
-        </li>
-        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
-          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/firma}">Pregled firmi</a></button>
-
+          <a class="btn btn-light btn-sm mx-1" th:href="@{/korisnici}">Pregled korisnika</a>
         </li>
         <li class="nav-item">
-          <button class="Btn">
-
-            <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
-
-            <div class="text"><a class="nav-link" style="color:white;" th:href="@{/logout}">Odjava</a></div>
-          </button>
+          <a class="btn btn-danger btn-sm mx-1" th:href="@{/logout}">Odjava</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<body>
 <div class="container">
   <h1 th:text="${pozicija.nazivPozicije}">Naziv pozicije</h1>
 
-  <div class="pozicija-sadrzaj">
-    <h2>Opis pozicije</h2>
-    <p class="pozicija-lista" th:text="${pozicija.opisPozicije}">Ovdje dolazi opis pozicije.</p>
+  <h2>Opis pozicije</h2>
+  <p th:text="${pozicija.kratakOpisPozicije}">Ovdje dolazi opis pozicije.</p>
 
-    <h2>Kvalifikacije</h2>
-    <ul class="pozicija-lista" th:each="kvalifikacija : ${pozicija.kvalifikacije}">
-      <li th:text="${kvalifikacija}">Kvalifikacija 1</li>
-    </ul>
+  <h2 th:if="${pozicija.firma != null}">Firma</h2>
+  <p th:text="${pozicija.firma.naziv}">Naziv firme</p>
 
-    <h2>Odgovornosti</h2>
-    <ul class="pozicija-lista" th:each="odgovornost : ${pozicija.odgovornosti}">
-      <li th:text="${odgovornost}">Odgovornost 1</li>
-    </ul>
-  </div>
+  <h2 th:if="${pozicija.zanimanje != null}">Zanimanje</h2>
+  <p th:text="${pozicija.zanimanje.naziv}">Naziv zanimanja</p>
+
+  <h2>Datum trajanja</h2>
+  <p>Od: <span th:text="${pozicija.datumOd}"></span> Do: <span th:text="${pozicija.datumDo}"></span></p>
+
+  <h2 th:if="${pozicija.prijava != null and !pozicija.prijava.isEmpty()}">Prijavljeni kandidati</h2>
+  <ul class="pozicija-lista" th:if="${pozicija.prijava != null}">
+    <li th:each="prijava : ${pozicija.prijava}" th:text="${prijava.korisnik.ime}"></li>
+  </ul>
 
   <div class="button-container">
-    <a href="/pozicije"><button class="btn btn-outline-warning">Natrag na listu pozicija</button></a>
+    <a href="/pozicije" class="btn btn-outline-warning">Natrag na listu pozicija</a>
   </div>
 </div>
 </body>
